[package]
name = "feedrs"
version = "0.0.1"
authors = ["Joshua Chapman <joshua.samuel.chapman@protonmail.com>"]
edition = "2018"

[dependencies]
# TODO: Remove unnecessary features ( probably only ["rt-threaded","macros",
# "time"] are needed)
# TODO: Upgrade to tokio 0.3 when it will be supported by reqwest
tokio = { version = "0.2", features = ["full"] }
# Requests
reqwest = "0.10"
# Parser
syndication = "0.5"
# TUI
tui = "0.12"
termion = "1.5"
# Configuration
clap = "2.33"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
# Database
sqlx = { version = "0.4", features = [ "runtime-tokio-native-tls", "sqlite" ] }

