[package]
name = "feedrs"
version = "0.0.1"
authors = ["Joshua Chapman <joshua.samuel.chapman@protonmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
# TODO: Remove unnecessary features ( probably only ["rt-threaded","macros",
# "time"] are needed)
# TODO: Upgrade to tokio 1 and reqwest 0.11 when it will be supported by sqlx
tokio = { version = "0.2", features = ["full"] }
# Requests
reqwest = "0.10"
# Parser
syndication = "0.5"
rss = "1.9"
html2text = "0.2"
chrono = "0.4"
# TUI
tui = { version = "0.12", features = ["crossterm"] }
crossterm = "0.18"
# Configuration
clap = "2.33"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
# Database
sqlx = { version = "0.4", features = [ "runtime-tokio-rustls", "sqlite" ] }

