[package]
name = "feedrs"
version = "0.0.1"
authors = ["Joshua Chapman <joshua.samuel.chapman@protonmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
# TODO: Remove unnecessary features ( probably only ["rt-threaded","macros",
# "time"] are needed)
tokio = { version = "1.1", features = ["full"] }
# Requests
reqwest = "0.11"
# Parser
syndication = "0.5"
rss = "1.9"
chrono = "0.4"
html2text = "0.2.1"
# TUI
tui = { version = "0.12", features = ["crossterm"] }
crossterm = "0.18"
# Configuration
clap = "2.33"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
# Database
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "sqlite", "chrono", "macros", "offline" ] }

